--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sucrase": "^3.10.1"
   },
   "dependencies": {
+    "@sentry/node": "5.10.2",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
