--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "queue": "nodemon src/queue.js"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
@@ -20,6 +21,7 @@
   "dependencies": {
     "@sentry/node": "5.10.2",
     "bcryptjs": "^2.4.3",
+    "bee-queue": "^1.2.2",
     "date-fns": "^2.8.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
