--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
     "sequelize": "^5.21.3",
     "youch": "^2.0.10",
     "yup": "^0.27.0"
-  }
+  },
+  "repository": "https://github.com/miroswd/GymPoint.git"
 }
